--- a/my-app/src/components/NavBar.module.css
+++ b/my-app/src/components/NavBar.module.css
@@ -65,6 +65,16 @@
   color: var(--quinaryColor);
 }
 
+.nav-item:hover {
+  color: var(--quinaryColor);
+  opacity: 0.75;
+}
+
+.nav-item.active{
+  color: var(--quinaryColor);
+  opacity: 0.75;
+}
+
 
 
 .right-section {
